# PriceTracker

./: .gitignore  Caddyfile  Caddyfile.docker  docker-compose.yml
backend/normalization-service/: .env.example  Dockerfile  pyproject.toml  try-normalized_queue.py
backend/normalization-service/app/: config.py  enricher.py  main.py  storage.py  validator.py  worker.py
backend/normalization-service/app/graph/: nodes.py  pipeline.py  state.py
backend/normalization-service/app/graph/nodes/: README.md  __init__.py  attribute_extractor.py  attribute_merger.py  calculate_policy.py  constants.py  error_end.py  field_standardizer.py  helpers.py  input_sanitizer.py  llm_extractor.py  quality_evaluator.py  save.py  semantic_kb.default.json  semantic_normalizer.py  semantic_validation.py  semantic_validation_config.py  semantic_validation_engine.py  text_canonicalizer.py  validation.py
backend/normalization-service/app/normalizer/: base.py  rules.py
backend/normalization-service/app/repositories/: product_repository.py  raw_repository.py
backend/normalization-service/tests/: README.md  conftest.py  test_field_standardizer_node.py  test_heuristicas_categorias.py  test_normalizer_pipeline.py  test_semantic_validation_node.py  test_worker_integration.py
backend/scrapping-service/: .env.example  Dockerfile  cli.py  pyproject.toml  test_scraper.py  test_url_scraper.py
backend/scrapping-service/app/: config.py  main.py  publisher.py  storage.py  worker.py
backend/scrapping-service/app/scraper/: base.py  http_scraper.py  playwright_scraper.py
backend/scrapping-service/app/scraper/test/: README.md  test_base.py  test_integration.py  test_playwright_scraper.py
backend/scrapping-service/app/sources/: __init__.py  aliexpress.py  alkomprar.py  alkosto.py  amazon.py  arturocalle.py  base.py  computienda.py  d1.py  dafiti.py  detector.py  discovery.py  exito.py  falabella.py  hm.py  homecenter.py  ishop.py  jumbo.py  mango.py  mattelsa.py  mercadolibre.py  miniso.py  olimpica.py  registry.py  rimax.py  sevenseven.py  tecnoplaza.py  totto.py  velez.py
backend/scrapping-service/app/sources/electronics/: __init__.py  aliexpress.py  alkomprar.py  alkosto.py  amazon.py  computienda.py  enjoyvideogames.py  exito.py  falabella.py  homecenter.py  ishop.py  jumbo.py  lenovo.py  mercadolibre.py  olimpica.py  tecnoplaza.py
backend/scrapping-service/app/sources/fashion/: __init__.py  arturocalle.py  dafiti.py  hm.py  (+5 more)
backend/scrapping-service/temp/: check_syntax.py  dump_html.py  inspect_deep.py  inspect_falabella.py  inspect_html.py  results.json
(+369 files in other folders)
