[project]
name = "pricetracker-scrapper"
version = "0.1.0"
dependencies = [
    "httpx>=0.27.0",
    "aio-pika>=9.0.0",
    "motor>=3.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Opcionales — descomentar según necesidad:
    # "playwright>=1.44.0",          # scraping con JS
    # "beautifulsoup4>=4.12.0",      # parsing HTML
    # "lxml>=5.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
