[project]
name = "pricetracker-scrapper"
version = "0.2.0"
dependencies = [
    "aio-pika>=9.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Playwright — scraping con JS (requiere: playwright install chromium)
    "playwright>=1.44.0",
    # Parsing HTML
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    # Discovery via SearXNG
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
